# claw-anyllm

./: .gitignore  AGENTS.md  Containerfile  README.md  UPSTREAM_README.md  docker-compose.yml
.claw/skills/electricien-quebec/: SKILL.md
.claw/skills/ralph-loop/: SKILL.md
.claw/skills/vibe-coder-orchestrator/: SKILL.md
.claw/templates/electricien-quebec/: communication-client.json  conformite.json  echeancier.json  liste-materiel.json  note-visite.json  projet.json  soumission.json
docs/: webhook-cron-autonomy-design.md
examples/: README.md  ecosystem-mcp-starter.json  mavis-provider.json  n8n-claw-webhook-workflow.json  ollama-provider.json  openai-provider.json
examples/agent-sdk-orchestrator/: README.md  package.json
examples/agent-sdk-orchestrator/python/: pyproject.toml
examples/agent-sdk-orchestrator/python/claw_eval/: __init__.py  cli.py  decision_engine.py  vision_eval.py
examples/agent-sdk-orchestrator/python/tests/: test_decision_engine.py
examples/agent-sdk-orchestrator/src/: agents.ts  evaluate.ts  hooks.ts  mcp.ts  orchestrator.ts  ralph.ts  todos.ts
lena/: BEHAVIOR_CONTRACT.md
rust/crates/api/src/: lib.rs
rust/crates/plugins/src/: lib.rs  manifest_v2.rs
rust/crates/runtime/src/: completion_gate.rs  config.rs  config_validate.rs  conversation.rs  fleet_spawn.rs  lib.rs  lsp_client.rs  orchestrator_health.rs  policy_engine.rs  project_router.rs  recovery_recipes.rs  team_cron_registry.rs  think_mode.rs  trident.rs  vm_runtime.rs  worker_boot.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/rust/docs/: plugin-manifest.md
(+16 files in other folders)
